--- a/main.css
+++ b/main.css
@@ -1,3 +1,81 @@
+body {
+  margin: 0;
+}
+
+html, body, .map-container {
+  height: 100%;
+  width: 100%;
+}
+
 #map {
-  height: 400px;
+  width: 100%;
+  height: 100%;
+}
+
+.command {
+  text-align: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  padding: 5px 20px;
+  cursor: Default;
+  background-color: black;
+  color: white;
+  opacity: .6;
+  cursor: Default;
+  font-size: 25px;
+  font-weight: bold;
+  z-index: 1002;
+}
+
+.hide-command {
+  animation-name: animateHide;
+  animation-duration: 2s;
+  animation-iteration-count: 2;
+  animation-direction: alternate;
+}
+
+@keyframes animateHide {
+  0%   {top: 0px;}
+  50%   {top: -100px;}
+  100%  {top: -100px;}
+}
+
+.result {
+  text-align: center;
+  position: fixed;
+  bottom: -100px;
+  left: 0;
+  right: 0;
+  padding: 5px 20px;
+  /* background-color: #FFFFFF; */
+  opacity: .6;
+  cursor: Default;
+  font-size: 25px;
+  font-weight: bold;
+  z-index: 1002;
+}
+
+.show {
+  animation-name: animateShowHide;
+  animation-duration: 2s;
+  animation-iteration-count: 2;
+  animation-direction: alternate;
+}
+
+@keyframes animateShowHide {
+  0%   {bottom: -100px;}
+  50%   {bottom: 0px;}
+  100%  {bottom: 0px;}
+}
+
+.alarm {
+  background-color: red;
+  color: white;
+}
+
+.success {
+  background-color: green;
+  color: white;
 }
