--- a/main.css
+++ b/main.css
@@ -30,13 +30,13 @@ html, body, .map-container {
 }
 
 .hide-command {
-  animation-name: animateHide;
-  animation-duration: 2s;
+  animation-name: animateHideCommand;
+  animation-duration: 1s;
   animation-iteration-count: 2;
   animation-direction: alternate;
 }
 
-@keyframes animateHide {
+@keyframes animateHideCommand {
   0%   {top: 0px;}
   50%   {top: -100px;}
   100%  {top: -100px;}
@@ -58,13 +58,13 @@ html, body, .map-container {
 }
 
 .show {
-  animation-name: animateShowHide;
-  animation-duration: 2s;
+  animation-name: animateShowResult;
+  animation-duration: 1s;
   animation-iteration-count: 2;
   animation-direction: alternate;
 }
 
-@keyframes animateShowHide {
+@keyframes animateShowResult {
   0%   {bottom: -100px;}
   50%   {bottom: 0px;}
   100%  {bottom: 0px;}
