Some stats collection during game

--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ html, body, .map-container {
 }
 
 .not-allowed-cursor{
-  cursor: not-allowed !important
+  cursor: grab !important
 }
 /* #endregion */
 
