--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 /* #region CSS RELATED TO GENERAL PAGE LAYOUT */
 body {
   margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 html, body, .map-container {
@@ -21,18 +22,18 @@ html, body, .map-container {
 /* #endregion */
 
 /* #region CSS RELATED TO COMMAND AND RESULT MODALS */
-.command {
+.command-container {
   text-align: center;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
-  padding: 5px 20px;
+  padding: 5px 40px;
   background-color: black;
   color: white;
   opacity: .6;
   pointer-events: none;
-  font-size: 25px;
+  font-size: 20px;
   font-weight: bold;
   z-index: 1002;
 }
@@ -48,6 +49,22 @@ html, body, .map-container {
   0%   {top: 0px;}
   50%   {top: -100px;}
   100%  {top: -100px;}
+}
+
+.progress {
+  position: absolute;
+  left: 5px;
+  font-size: 15px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.time-elapsed {
+  position: absolute;
+  right: 5px;
+  font-size: 15px;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .result {
