--- a/css/main.css
+++ b/css/main.css
@@ -233,3 +233,55 @@ tbody tr:nth-child(even) {
   background-color: #F0F0F0;
 }
 /* #endregion */
+
+.welcome-infobox {
+  text-align: center;
+  position: fixed;
+  /* pointer-events: none; */
+  font-size: 20px;
+  font-weight: bold;
+  z-index: 1003;
+  top: 0px;
+  right: 0;
+  height: 100vh;
+  width: 300px;
+  /* padding: 5px 60px 5px 40px; */
+  background-color: white;
+  /* color: white; */
+
+  transition-property: right;
+  transition-duration: 200ms;
+  transition-timing-function: linear;
+
+  box-shadow: 0 1px 2px rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);
+}
+
+.hide-welcome {
+  right: -300px;
+}
+
+.expand-button {
+  width: 25px;
+  height: 50px;
+  /* background-color: white; */
+  top: calc(50% - 25px);
+  position: absolute;
+  left: -25px;
+  border-radius: 10px 0 0 10px;
+
+  border: 0;
+  box-shadow: -2px 2px 2px rgb(60 64 67 / 30%);
+  cursor: pointer;
+  border-right: 1px solid #d4d4d4;
+
+  background: #fff 7px/7px 10px no-repeat;
+  padding: 0;
+}
+
+.arrow-image {
+  vertical-align: middle;
+}
+
+.mirror-image {
+  transform: scaleX(-1);
+}
