--- a/css/main.css
+++ b/css/main.css
@@ -238,26 +238,26 @@ tbody tr:nth-child(even) {
   text-align: center;
   position: fixed;
   /* pointer-events: none; */
-  font-size: 20px;
-  font-weight: bold;
+  /* font-size: 20px;
+  font-weight: bold; */
+  opacity: 0.95;
   z-index: 1003;
   top: 0px;
   right: 0;
   height: 100vh;
-  width: 300px;
-  /* padding: 5px 60px 5px 40px; */
+  width: 230px;
   background-color: white;
   /* color: white; */
-
+  padding: 10px;
+  box-sizing: border-box;
   transition-property: right;
   transition-duration: 200ms;
   transition-timing-function: linear;
-
   box-shadow: 0 1px 2px rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);
 }
 
 .hide-welcome {
-  right: -300px;
+  right: -230px;
 }
 
 .expand-button {
@@ -284,4 +284,19 @@ tbody tr:nth-child(even) {
 
 .mirror-image {
   transform: scaleX(-1);
+}
+
+.logo {
+  width: 70px;
+}
+
+.welcome-infobox-heading {
+  font-size: 25px;
+  margin: 5px;
+  font-weight: bold;
+}
+
+.welcome-infobox-intro {
+  margin: 10px 10px;
+  text-align: left;
 }
