--- a/css/main.css
+++ b/css/main.css
@@ -242,6 +242,7 @@ tbody tr:nth-child(even) {
   top: 0px;
   right: 0;
   height: 100vh;
+  height: -webkit-fill-available; /* mobile viewport bug fix */
   width: 230px;
   border-radius: 30px 0 0 30px;
   background-color: white;
