--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@ html, body, .map-container {
   right: 0;
   height: 100vh;
   height: -webkit-fill-available; /* mobile viewport bug fix */
-  width: 230px;
+  width: 270px;
   border-radius: 30px 0 0 30px;
   background-color: white;
   padding: 20px;
@@ -47,7 +47,7 @@ html, body, .map-container {
 }
 
 .hide-welcome {
-  right: -230px;
+  right: -270px;
 }
 
 .expand-button {
@@ -104,6 +104,7 @@ html, body, .map-container {
   text-decoration: none;
   color: black;
   margin: 10px 0;
+  text-align: left;
 }
 
 .highscore-link {
@@ -128,7 +129,7 @@ html, body, .map-container {
 }
 
 .welcome-infobox-help {
-  margin-top: 40px;
+  margin-top: 25px;
   font-weight: bold;
 }
 
