--- a/css/main.css
+++ b/css/main.css
@@ -405,3 +405,46 @@ th[colspan]:not([colspan="1"]) {
   color: white;
 }
 /* #endregion */
+
+/* #region CSS RELATED TO GAME SELECTOR */
+.selection-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  /* background-color: white; */
+  left: 20px;
+  /* transform: translate(-20%, 0); */
+  position: fixed;
+  z-index: 1012;
+  /* width: 70%; */
+  top: 70px;
+  overflow: auto;
+  max-height: 80vh;
+  opacity: .7;
+}
+
+.hide {
+  display: none;
+}
+
+.continent-selector {
+  margin: 2px;
+  background-color: #1c2434;
+  padding: 5px;
+}
+
+.continent-heading {
+  font-size: 20px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.continent-element {
+  padding: 5px;
+}
+
+.continent-element:hover {
+  cursor: pointer;
+  background-color: #323C50;
+}
+/* #endregion */
