--- a/css/main.css
+++ b/css/main.css
@@ -431,7 +431,7 @@ th[colspan]:not([colspan="1"]) {
 .continent-selector {
   margin: 2px;
   background-color: #1c2434;
-  padding: 0px 10px;
+  padding: 10px;
 }
 
 @media (max-width: 600px){
